--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://monisha-training.chnnxn6kg6y4.us-west-1.rds.amazonaws.com/jotheeswari_db
+spring.datasource.username=jotheeswari
+spring.datasource.password=jotheeswari
+
 
